# actanara

./: .env.example  .gitignore  CHANGELOG.md  HISTORY.md  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  config.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-release.txt
docs/: cli-boundary.md  index.html  local-operations-runbook.md  local-operations-runbook.zh-CN.md  new-user-onboarding-runbook.md  new-user-onboarding-runbook.zh-CN.md  nova-task-work-graph-reconciliation.md  production-clean-inventory.md  rag-external-agent-contract.md  v1-release-assurance.md
install/: bootstrap-linux.sh  bootstrap.sh  dependency_contract.py  install.sh  install_linux.py  runtime-dependencies.lock.json  setup.sh  update_transaction.py
tests/: dashboard-backup.spec.js  dashboard-live-context.js  dashboard-live-context.node.js  dashboard-live.spec.js  dashboard-release-qa.spec.js  dashboard-share.spec.js  release-page.spec.js  run_isolated_release_suite.py  test_actanara_diary_cli.py  test_backup.py  test_backup_settings.py  test_dashboard_ai_assets_backup.py  test_dashboard_ai_assets_codex_divergence.py  test_dashboard_ai_assets_file_policy.py  test_dashboard_ai_assets_state.py  test_dashboard_background_tasks.py  test_dashboard_backup_scheduler.py  test_dashboard_backup_static_contract.py  test_dashboard_diary_llm_provider.py  test_dashboard_launch_agent.py  test_dashboard_live_token_semantics.py  test_dashboard_metrics_router.py  test_dashboard_msgbox.py  test_dashboard_nova_task_review.py  test_dashboard_provider_chain.py  test_dashboard_rag_external_sources.py  test_dashboard_security.py  test_dashboard_session_file_contracts.py  test_dashboard_share_contract.py  test_dashboard_skills_settings.py  test_dashboard_snapshots.py  test_dashboard_state.py  test_dashboard_static_contracts.py  test_dashboard_tailscale.py  test_dashboard_token_clock_concurrency.py  test_db.py  (+69 more)
(+204 files in other folders)
