[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actanara"
version = "1.3.0"
description = "Actanara local diary runtime, pipeline, dashboard, nova-RAG, and task system."
readme = "README.md"
authors = [
  { name = "Neo-Isshin", email = "nxc8335@gmail.com" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/Neo-Isshin/actanara"
Repository = "https://github.com/Neo-Isshin/actanara"
Issues = "https://github.com/Neo-Isshin/actanara/issues"

[project.optional-dependencies]
dashboard = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "PyYAML>=6,<7",
  "croniter>=2,<7",
]
rag-server = [
  "numpy>=1.26,<3",
  "pypdf>=6,<7",
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "pydantic>=2,<3",
]
rag-local = [
  "sentence-transformers>=3,<6",
  "torch>=2,<3",
  "numpy>=1.26,<3",
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "pydantic>=2,<3",
]
dev-test = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "PyYAML>=6,<7",
  "croniter>=2,<7",
  "numpy>=1.26,<3",
  "pypdf>=6,<7",
]

[project.scripts]
actanara = "data_foundation.cli:main"

[tool.setuptools]
package-dir = {"" = "src", "app" = "src/dashboard/app", "advanced" = "advanced"}
py-modules = ["config"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", "src/dashboard", "."]
include = ["agentic_rag*", "app*", "data_foundation*", "diary_generator*", "ai_assets_center*", "advanced*"]

[tool.setuptools.package-data]
"data_foundation" = ["migrations/*.sql", "migration_compatibility.json"]
"app" = ["static/*.html", "static/css/*.css", "static/js/*.js", "static/img/*.png"]
"agentic_rag" = ["rag_eval_queries.jsonl", "rag_eval_queries.en.jsonl", "rag_eval_queries.zh.jsonl"]
